software/pcx86/sys/dos/compaq/3.10/README.md
---
layout: page
title: COMPAQ MS-DOS 3.10
permalink: /software/pcx86/sys/dos/compaq/3.10/
redirect_from:
  - /disks/pcx86/dos/compaq/3.10/
  - /disks/pc/dos/compaq/
machines:
  - id: deskpro386
    type: pcx86
    config: /machines/pcx86/compaq/deskpro386/ega/2048kb/machine.xml
    autoMount:
      A:
        name: COMPAQ MS-DOS 3.10 (1985-09 Disk 1)
      B:
        name: COMPAQ MS-DOS 3.10 (1985-09 Disk 2)
    autoStart: true
    autoType: \r\r
---

This directory contains *four* different variations of COMPAQ MS-DOS 3.10:

  - [COMPAQ MS-DOS 3.10 (1985-09)](#directory-of-compaq-ms-dos-310-1985-09-disk-1)
  - [COMPAQ MS-DOS 3.10 (1986-03)](#directory-of-compaq-ms-dos-310-1986-03-disk-1)
  - [COMPAQ MS-DOS 3.10 (1986-10)](#directory-of-compaq-ms-dos-310-1986-10-disk-1)

including a December 1985 disk image from the PCjs library (it is not a distribution copy and is provided for historical interest only):

  - [COMPAQ MS-DOS 3.10 (1985-12)](#compaq-ms-dos-310-1985-12)

All COMPAQ Supplemental User Programs, as well as diagnostics and setup utilities, are now filed under `COMPAQ Diagnostics`.  The earliest known version of `CEMM` can be found on the [COMPAQ DeskPro 386 (1986)](/software/pcx86/diag/compaq/1986/) diskette.

{% include machine.html id="deskpro386" %}

### COMPAQ MS-DOS 3.10

Released in 1985 by COMPAQ Computer Corp, this version of MS-DOS displays the following messages on boot:

	The COMPAQ Personal Computer MS-DOS
	Version 3.10
	
	(C) Copyright COMPAQ Computer Corp. 1982,83,84,85
	(C) Copyright Microsoft Corp. 1982,82,83,84,85

Directory listings of the distribution diskettes are provided below.

### Directory of COMPAQ MS-DOS 3.10 (1985-09 Disk 1)

     Volume in drive A has no label
     Directory of A:\

    IBMBIO   COM*     9728   9-30-85  12:00p
    IBMDOS   COM*    27760   9-30-85  12:00p
    COMMAND  COM     23210   9-30-85  12:00p
    VDISK    SYS      2926   9-30-85  12:00p
    ANSI     SYS      1593   9-30-85  12:00p
    ENHDISK  SYS      1569   9-30-85  12:00p
    CLOCK    SYS      1458   9-30-85  12:00p
    FORMAT   COM      8987   9-30-85  12:00p
    CHKDSK   COM      9435   9-30-85  12:00p
    SYS      COM      3823   9-30-85  12:00p
    DISKCOMP COM      2897   9-30-85  12:00p
    DISKCOPY COM      3006   9-30-85  12:00p
    COMP     COM      2470   9-30-85  12:00p
    MODE     COM      4180   9-30-85  12:00p
    FDISK    COM      7200   9-30-85  12:00p
    BACKUP   COM      5465   9-30-85  12:00p
    RESTORE  COM      5247   9-30-85  12:00p
    ASSIGN   COM      1509   9-30-85  12:00p
    SORT     EXE      1664   9-30-85  12:00p
    FIND     EXE      6403   9-30-85  12:00p
    MORE     COM       282   9-30-85  12:00p
    PRINT    COM      8291   9-30-85  12:00p
    TREE     COM      1756   9-30-85  12:00p
    LABEL    COM      1239   9-30-85  12:00p
    BASIC    COM      1175   9-30-85  12:00p
    BASICA   COM      1173   9-30-85  12:00p
    BASICA   EXE     66576   9-30-85  12:00p
    GRAPHICS COM      3048   9-30-85  12:00p
    EDLIN    COM      7261   9-30-85  12:00p
    SHARE    EXE      8304   9-30-85  12:00p
    ATTRIB   EXE     15091   9-30-85  12:00p
    SELECT   COM      1714   9-30-85  12:00p
    KEYBGR   COM      8085   9-30-85  12:00p
    KEYBFR   COM      8157   9-30-85  12:00p
    KEYBUK   COM      7551   9-30-85  12:00p
    KEYBIT   COM      7770   9-30-85  12:00p
    KEYBSP   COM      8149   9-30-85  12:00p
    GRAFTABL COM      1130   9-30-85  12:00p
    DISKINIT COM      9168   9-30-85  12:00p
           39 file(s)     296450 bytes
                           45056 bytes free

### Directory of COMPAQ MS-DOS 3.10 (1985-09 Disk 2)

     Volume in drive A has no label
     Directory of A:\

    SETCLOCK COM      2771   9-30-85  12:00p
    TAPE     EXE     27992   9-30-85  12:00p
    BASICA   COM      1173   9-30-85  12:00p
    SUBST    EXE     16611   9-30-85  12:00p
    JOIN     EXE     15971   9-30-85  12:00p
    EXE2BIN  EXE      2816   9-30-85  12:00p
    LINK     EXE     38144   9-30-85  12:00p
    DEBUG    COM     15552   9-30-85  12:00p
    RECOVER  COM      4226   9-30-85  12:00p
    CMPQADAP COM     21940   9-30-85  12:00p
    GRAFTABL COM      1130   9-30-85  12:00p
    DEMO     BAT        14   9-30-85  12:00p
    DEMO     BAS      6146   9-30-85  12:00p
    DEMO1    BAS     15611   9-30-85  12:00p
    DEMO2    BAS     15629   9-30-85  12:00p
    DEMO3    BAS     25625   9-30-85  12:00p
    USA      DAT     16128   9-30-85  12:00p
    EUROPE   DAT     16008   9-30-85  12:00p
    INTEREST BAS       384   9-30-85  12:00p
    WORDS             1306   9-30-85  12:00p
           20 file(s)     245177 bytes
                          103424 bytes free

### Directory of COMPAQ MS-DOS 3.10 (1986-03 Disk 1)

     Volume in drive A has no label
     Directory of A:\

    IBMBIO   COM*     9728   3-27-86  12:00p
    IBMDOS   COM*    27760   3-27-86  12:00p
    COMMAND  COM     23210   3-27-86  12:00p
    VDISK    SYS      2926   3-27-86  12:00p
    ANSI     SYS      1631   3-27-86  12:00p
    ENHDISK  SYS      1569   3-27-86  12:00p
    CLOCK    SYS      1462   3-27-86  12:00p
    FORMAT   COM      8987   3-27-86  12:00p
    CHKDSK   COM      9435   3-27-86  12:00p
    SYS      COM      3823   3-27-86  12:00p
    DISKCOMP COM      2897   3-27-86  12:00p
    DISKCOPY COM      3006   3-27-86  12:00p
    COMP     COM      2470   3-27-86  12:00p
    MODE     COM      4180   3-27-86  12:00p
    FDISK    COM      7200   3-27-86  12:00p
    BACKUP   COM      5465   3-27-86  12:00p
    RESTORE  COM      5247   3-27-86  12:00p
    ASSIGN   COM      1509   3-27-86  12:00p
    SORT     EXE      1664   3-27-86  12:00p
    FIND     EXE      6403   3-27-86  12:00p
    MORE     COM       282   3-27-86  12:00p
    PRINT    COM      8291   3-27-86  12:00p
    TREE     COM      1756   3-27-86  12:00p
    LABEL    COM      1239   3-27-86  12:00p
    BASIC    COM      1424   3-27-86  12:00p
    BASICA   COM      1422   3-27-86  12:00p
    BASICA   EXE     66544   3-27-86  12:00p
    GRAPHICS COM      3048   3-27-86  12:00p
    EDLIN    COM      7261   3-27-86  12:00p
    SHARE    EXE      8304   3-27-86  12:00p
    SELECT   COM      1714   3-27-86  12:00p
    KEYBGR   COM      8085   3-27-86  12:00p
    KEYBFR   COM      8157   3-27-86  12:00p
    KEYBUK   COM      7551   3-27-86  12:00p
    KEYBIT   COM      7770   3-27-86  12:00p
    KEYBSP   COM      8149   3-27-86  12:00p
    KEYBDA   COM      8613   3-27-86  12:00p
    KEYBNO   COM      8613   3-27-86  12:00p
    KEYBSV   COM      8623   3-27-86  12:00p
    KEYBSU   COM      8623   3-27-86  12:00p
    GRAFTABL COM      1130   3-27-86  12:00p
    DISKINIT COM      9179   3-27-86  12:00p
           42 file(s)     316350 bytes
                           24576 bytes free

### Directory of COMPAQ MS-DOS 3.10 (1986-10 Disk 1)

     Volume in drive A has no label
     Directory of A:\

    IBMBIO   COM*     9728  10-31-86  12:00p
    IBMDOS   COM*    27760  10-31-86  12:00p
    COMMAND  COM     23210  10-31-86  12:00p
    VDISK    SYS      3420  10-31-86  12:00p
    ANSI     SYS      1631  10-31-86  12:00p
    ENHDISK  SYS      1569  10-31-86  12:00p
    CLOCK    SYS      1471  10-31-86  12:00p
    FORMAT   COM      8987  10-31-86  12:00p
    CHKDSK   COM      9435  10-31-86  12:00p
    SYS      COM      3823  10-31-86  12:00p
    DISKCOMP COM      2897  10-31-86  12:00p
    DISKCOPY COM      3006  10-31-86  12:00p
    COMP     COM      2470  10-31-86  12:00p
    MODE     COM      5481  10-31-86  12:00p
    FDISK    COM      7200  10-31-86  12:00p
    BACKUP   COM      5465  10-31-86  12:00p
    RESTORE  COM      5247  10-31-86  12:00p
    ASSIGN   COM      1509  10-31-86  12:00p
    SORT     EXE      1664  10-31-86  12:00p
    FIND     EXE      6403  10-31-86  12:00p
    MORE     COM       282  10-31-86  12:00p
    PRINT    COM      8291  10-31-86  12:00p
    TREE     COM      1756  10-31-86  12:00p
    LABEL    COM      1239  10-31-86  12:00p
    BASIC    COM      1424  10-31-86  12:00p
    BASICA   COM      1422  10-31-86  12:00p
    BASICA   EXE     66544  10-31-86  12:00p
    GRAPHICS COM      7204  10-31-86  12:00p
    EDLIN    COM      7261  10-31-86  12:00p
    SHARE    EXE      8304  10-31-86  12:00p
    SELECT   COM      1714  10-31-86  12:00p
    KEYBGR   COM     12745  10-31-86  12:00p
    KEYBFR   COM     12745  10-31-86  12:00p
    KEYBUK   COM     12745  10-31-86  12:00p
    KEYBIT   COM     12745  10-31-86  12:00p
    KEYBSP   COM     12745  10-31-86  12:00p
    GRAFTABL COM      1130  10-31-86  12:00p
    DISKINIT COM      9259  10-31-86  12:00p
           38 file(s)     311931 bytes
                           27648 bytes free

### Directory of COMPAQ MS-DOS 3.10 (1986-10 Disk 2)

     Volume in drive A has no label
     Directory of A:\

    SETCLOCK COM      2771  10-31-86  12:00p
    TAPE     EXE     42512  10-31-86  12:00p
    BASICA   COM      1422  10-31-86  12:00p
    SUBST    EXE     16611  10-31-86  12:00p
    JOIN     EXE     15971  10-31-86  12:00p
    ATTRIB   EXE     15091  10-31-86  12:00p
    EXE2BIN  EXE      2816  10-31-86  12:00p
    LINK     EXE     38144  10-31-86  12:00p
    DEBUG    COM     15552  10-31-86  12:00p
    RECOVER  COM      4226  10-31-86  12:00p
    CMPQADAP COM     22340  10-31-86  12:00p
    GRAFTABL COM      1130  10-31-86  12:00p
    GRAFTBNO COM      1130  10-31-86  12:00p
    KEYBDA   COM      8613  10-31-86  12:00p
    KEYBNO   COM      8613  10-31-86  12:00p
    KEYBSV   COM      8623  10-31-86  12:00p
    KEYBSU   COM      8623  10-31-86  12:00p
    DEMO     BAT        14  10-31-86  12:00p
    DEMO     BAS      6146  10-31-86  12:00p
    DEMO1    BAS     15611  10-31-86  12:00p
    DEMO2    BAS     15629  10-31-86  12:00p
    DEMO3    BAS     25625  10-31-86  12:00p
    USA      DAT     16128  10-31-86  12:00p
    EUROPE   DAT     16008  10-31-86  12:00p
    INTEREST BAS       384  10-31-86  12:00p
    WORDS             1306  10-31-86  12:00p
           26 file(s)     311039 bytes
                           34816 bytes free

### Directory of COMPAQ PC DOS 3.20 Support

     Volume in drive A has no label
     Directory of A:\

    IBMBIO   COM*     9728   3-27-86  12:00p
    IBMDOS   COM*    27760   3-27-86  12:00p
    COMMAND  COM*    23210   3-27-86  12:00p
    DISKCOPY COM*     3006   8-14-86  12:00p
    YCR         *        4   8-14-86  12:00p
    AUTOEXEC BAT        33   8-14-86  12:00p
    README   CPQ      1796   8-14-86  12:00p
    INSTALL  DOC      6790   8-14-86  12:00p
    DISKINIT COM      9259   8-14-86  12:00p
    SUPINST  BAT        76   8-14-86  12:00p
    ENHDISK  SYS      1569   8-14-86  12:00p
    FDISK    COM      7200   8-14-86  12:00p
    FORMAT   COM      8987   8-14-86  12:00p
    SYS      COM      3823   8-14-86  12:00p
    INST1    BAT      1875   8-14-86  12:00p
    INST1    SCR       645   8-14-86  12:00p
    INST2    SCR       479   8-14-86  12:00p
    INSTDEL  BAT        49   8-14-86  12:00p
           18 file(s)     106289 bytes
                          245760 bytes free

### COMPAQ MS-DOS 3.10 (1985-12)

This December 1985 release of COMPAQ MS-DOS 3.10 is from a 1.2Mb disk in our private collection.  Since this disk was created for personal use, it also contains files unrelated to COMPAQ MS-DOS 3.10.  A directory listing is provided [below](#directory-of-compaq-ms-dos-310-1985-12m).

This release displays the following messages on boot:

	The COMPAQ Personal Computer MS-DOS
	Version 3.10
	
	(C) Copyright COMPAQ Computer Corp. 1982,83,84,85
	(C) Copyright Microsoft Corp. 1982,82,83,84,85

which is *identical* to all the other 3.10 releases.  And most of the files are identical, so from a MS-DOS functionality standpoint, there was no difference between these releases.

Also of interest, this disk contains two COMPAQ ENHDISK drivers:

  - ENHDISK.OLD (dated 12-17-85)
  - ENHDISK.SYS (dated 08-14-86)

However, even though the drivers are different, they both display the same message when loaded:

	The COMPAQ Personal Computer ENHDISK Version 3.10
	(C) Copyright COMPAQ Computer Corporation 1984, 1985

The ENHDISK.SYS file dated 08-14-86 is identical to ENHDISK.SYS dated 10-31-86 on the 3.10 distribution disks above.

### Directory of COMPAQ MS-DOS 3.10 (1985 1.2M)

     Volume in drive A has no label
     Directory of A:\

    IBMBIO   COM*     9728  12-17-85  12:00p
    IBMDOS   COM*    27760  12-17-85  12:00p
    COMMAND  COM     23210  12-17-85  12:00p
    CONFIG   SYS        55  10-15-87   5:52p
    DISKINIT COM      9179  12-17-85  12:00p
    VDISK    SYS      2926  12-17-85  12:00p
    ANSI     SYS      1593  12-17-85  12:00p
    ENHDISK  SYS      1569   8-14-86  12:00p
    CLOCK    SYS      1462  12-17-85  12:00p
    FORMAT   COM      8987  12-17-85  12:00p
    CHKDSK   COM      9435  12-17-85  12:00p
    SYS      COM      3823  12-17-85  12:00p
    DISKCOMP COM      2897  12-17-85  12:00p
    DISKCOPY COM      3006  12-17-85  12:00p
    COMP     COM      2470  12-17-85  12:00p
    MODE     COM      4180  12-17-85  12:00p
    FDISK    COM      7200  12-17-85  12:00p
    BACKUP   COM      5465  12-17-85  12:00p
    RESTORE  COM      5247  12-17-85  12:00p
    ASSIGN   COM      1509  12-17-85  12:00p
    SORT     EXE      1664  12-17-85  12:00p
    FIND     EXE      6403  12-17-85  12:00p
    MORE     COM       282  12-17-85  12:00p
    PRINT    COM      8291  12-17-85  12:00p
    TREE     COM      1756  12-17-85  12:00p
    LABEL    COM      1239  12-17-85  12:00p
    BASIC    COM      1424  12-17-85  12:00p
    BASICA   COM      1422  12-17-85  12:00p
    BASICA   EXE     66544  12-17-85  12:00p
    GRAPHICS COM      3048  12-17-85  12:00p
    EDLIN    COM      7261  12-17-85  12:00p
    SHARE    EXE      8304  12-17-85  12:00p
    ATTRIB   EXE     15091  12-17-85  12:00p
    SELECT   COM      1714  12-17-85  12:00p
    KEYBGR   COM      8085  12-17-85  12:00p
    KEYBFR   COM      8157  12-17-85  12:00p
    KEYBUK   COM      7551  12-17-85  12:00p
    KEYBIT   COM      7770  12-17-85  12:00p
    KEYBSP   COM      8149  12-17-85  12:00p
    KEYBDA   COM      8613  12-17-85  12:00p
    KEYBNO   COM      8613  12-17-85  12:00p
    KEYBSV   COM      8623  12-17-85  12:00p
    GRAFTBNO COM      1130  12-17-85  12:00p
    GRAFTABL COM      1130  12-17-85  12:00p
    SETCLOCK COM      2771  12-17-85  12:00p
    TAPE     EXE     28008  12-17-85  12:00p
    SUBST    EXE     16611  12-17-85  12:00p
    JOIN     EXE     15971  12-17-85  12:00p
    EXE2BIN  EXE      2816  12-17-85  12:00p
    LINK     EXE     38144  12-17-85  12:00p
    DEBUG    COM     15552  12-17-85  12:00p
    RECOVER  COM      4226  12-17-85  12:00p
    CMPQADAP COM     21940  12-17-85  12:00p
    DEMO     BAT        14  12-17-85  12:00p
    DEMO     BAS      6146  12-17-85  12:00p
    DEMO1    BAS     15611  12-17-85  12:00p
    DEMO2    BAS     15629  12-17-85  12:00p
    DEMO3    BAS     25625  12-17-85  12:00p
    USA      DAT     16128  12-17-85  12:00p
    EUROPE   DAT     16008  12-17-85  12:00p
    INTEREST BAS       384  12-17-85  12:00p
    WORDS             1306  12-17-85  12:00p
    ENHDISK  OLD      1569  12-17-85  12:00p
    KEYFIX   COM       104   1-30-87   1:57p
    AUTOEXEC BAT        38  10-15-87   6:05p
    PCPAL    EXE     63088   6-23-87  12:21p
           66 file(s)     631654 bytes
                          564736 bytes free
